# outlook_calendar_availability_checker

./: .gitignore  README.md  config.example.yaml  pyproject.toml
src/outlook_calendar_checker/: main.py
